Some changes to avoid errors when predictions generate NaNs.

--- a/Validation/Tutorial.ipynb
+++ b/Validation/Tutorial.ipynb
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -796,7 +796,31 @@
       "0    200.591214\n",
       "dtype: float64\n",
       "# Burning in\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b==================================================\n",
-      "# Sampling\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b================================================"
+      "# Sampling\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b==================================================\n",
+      "1    59.0\n",
+      "Name: c2015, dtype: float64\n",
+      "1    2.764030e+15\n",
+      "dtype: float64\n",
+      "1    150.930905\n",
+      "dtype: float64\n",
+      "# Burning in\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b==================================================\n",
+      "# Sampling\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b==================================================\n",
+      "2    22.0\n",
+      "Name: c2015, dtype: float64\n",
+      "2    18.802163\n",
+      "dtype: float64\n",
+      "2    19.029999\n",
+      "dtype: float64\n",
+      "# Burning in\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b==================================================\n",
+      "# Sampling\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b==================================================\n",
+      "3    87.0\n",
+      "Name: c2015, dtype: float64\n",
+      "3    48.720111\n",
+      "dtype: float64\n",
+      "3    36.826559\n",
+      "dtype: float64\n",
+      "# Burning in\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b==================================================\n",
+      "# Sampling\t[                                                  ]\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b========"
      ]
     }
    ],
