Some changes to tutorial and validation scripts.

--- a/Validation/Tutorial.ipynb
+++ b/Validation/Tutorial.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Preliminaries "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This tutorial illustrates the typical workflow one use to obtain results in the paper for the validation datasets. As such, it uses high level scripts and does **NOT** aim to illustrate how to write your own code."
    ]
@@ -18,7 +24,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -27,28 +35,40 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Notation "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "* Energy: The energy of a given expression $f_i$is $H=-\\log p(f_i|D)$. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Step 1: Determine the number of variables"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The first step is to determine the number of variables necessary for the sampling. To do this, we start by running the MCMC with a \"large\" number of variables. For this we use the \"sample_charac_parallel.py\" script, whose syntax is as follows:"
    ]
@@ -57,7 +77,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -94,7 +116,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "For the purpose of this tutorial, we will use some quick-and-dirty parameters. For real purposes, the default parameters are a good starting point (although -n 100000 is often too much; -n 10000 is generally more reasonable). Optionally, you may want to play with the following:\n",
     "* The burn-in parameter controls how many samples of the MCMC are disregarded before the actual sampling starts. The longest the burn-in, the better, so often values of 5,000 or even 10,000 are more appropriate. If, after running the sampling, you observe that the \"energy\" decreased during the sampling process "
@@ -104,7 +129,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -113,7 +140,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This creates a file DATASET/sample_charac_parallel__PPARFILE.dat which contains:\n",
     "* Sampling parameters (lines 1-4). \n",
@@ -125,7 +155,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now let's look at this file in some more detail, and discuss the most important aspects. First, let's take a look at the energy during the sampling process."
    ]
@@ -134,7 +167,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -158,14 +193,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "If this plot looks reasonably flat (aside from fluctuations), then we can go ahead. Otherwise, we would need to increase the burn-in time (or check for other reasons for the non-stationarity of the energy)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Next, let's take a look at another important quantity that could be indicative of improprer equilibration of the sample, namely, the number of iterations without swaps between parallel tempering samples."
    ]
@@ -174,7 +215,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -196,14 +239,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This is the number of iterations since the last swap of configurations between parallel tempering samples occurred. If this value goes often to the parameter ANNEAL (specified by the -a option, with default 100) and then drops, this is an indication that each parallel tempering sample is running independently of the others (no swaps between temperatures are taking place). In that case, we should probably increase the number of temperatures in the parallel tempering (with -T) and decrease the factor separating temperatures (with -s). The default is -T 10 -s 1.20, but for large datasets we have used -T 20 -s 1.08 (of course, T must be T>1)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "If the two plots above look OK, then we can finally look at how many variables are typically used in the sampling process."
    ]
@@ -212,7 +261,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -240,7 +291,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "So it seems that the models sampled never use large numbers of parameters. For example, if 18% of the expressions sampled use 5 parameters and only 1.8% use 6 parameters, we should probably use only 5 parameters (we typically set the threshold at 5%). We could run samples with a maximum of 5 and 6 parameters and verify that this number is appropriate. For the purposes of this tutorial, we assume that 5 is indeed a reasonable number of parameters.\n",
     "\n",
@@ -249,14 +303,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Step 2: Sample expressions "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now that we have the right number of parameters, we go ahead and run a good MCMC to analyze what kind of models we get. As before, here we will run a quick-and-dirty MCMC, but this is the place where you would want to have your computer sampling for a while."
    ]
@@ -265,7 +325,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -283,14 +345,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Step 3: Explore sampled partitions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Next, we can take a look at the 10 most plausible models that were sampled during the MCMC and print some information about each of these models, including their BIC, leave-one-out (LOO) validation error, etc. For this, we use the \"get_top_models.py\" script, which takes as input the sample_charac_parallel file that comes out of \"sample_charac_parallel.py\". For large datasets, obtaining LOO validation errors is not feasible; in those cases one should use the -l flag."
    ]
@@ -299,7 +367,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -495,7 +565,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "At the end of this long list, there is a LaTeX table with the models, their plausibilities, and their LOO validation error. Since this toy dataset is small, the formulas proposed are relatively simple; with more data, models would presumably get more sophisticated.\n",
     "\n",
@@ -506,7 +579,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -538,14 +613,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "In this case we observe that this model is considerably worse than the most plausible ones."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We can also analize in more detail the properties of one model. Let's do this writing real code, rather than running scripts. In particular let's fit the parameters of one particular model and see what the fit looks like:"
    ]
@@ -554,7 +635,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -604,7 +687,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Of course, this is simply the error of the fit. We could be a bit more rigorous and calculate a validation error, e.g. using a leave-one-out validation:"
    ]
@@ -613,7 +699,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -661,14 +749,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Step 4: Validation using model averaging "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "In the example above, we cheated--we got a reasonable model using all data points and then run a leave-one-out CV, but of course we knew that the model was reasonable for **all** the points. Scientists do this all the time (in the best cases, in the worst case they simply show the fits as above), but we like to do things properly. In this case, doing things properly entails:\n",
     "* Removing one point from the dataset.\n",
@@ -682,7 +776,9 @@
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -723,7 +819,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Let's do it, then!"
    ]
@@ -732,7 +831,9 @@
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
