updating name of general_parameters object in jupyter notebook

--- a/example/weber/run_weber_study.ipynb
+++ b/example/weber/run_weber_study.ipynb
@@ -26,7 +26,7 @@
     "from aer.experimentalist.experimentalist_popper import Experimentalist_Popper\n",
     "from aer.theorist.theorist_darts import DARTS_Type, Theorist_DARTS\n",
     "from aer.theorist.theorist_GUI import Theorist_GUI\n",
-    "from example.weber.weber_setup import gen_params, study_object, validation_object_1"
+    "from example.weber.weber_setup import general_parameters, study_object, validation_object_1"
    ],
    "metadata": {
     "collapsed": false,
@@ -115,16 +115,16 @@
    "outputs": [],
    "source": [
     "experimentalist = Experimentalist_Popper(\n",
-    "    study_name=gen_params.study_name,\n",
-    "    experiment_server_host=gen_params.host,\n",
-    "    experiment_server_port=gen_params.port,\n",
+    "    study_name=general_parameters.study_name,\n",
+    "    experiment_server_host=general_parameters.host,\n",
+    "    experiment_server_port=general_parameters.port,\n",
     "    experiment_design=weber_design,\n",
     ")\n",
     "\n",
     "experimentalist_validation = Experimentalist_Popper(\n",
-    "    study_name=gen_params.study_name_sampled,\n",
-    "    experiment_server_host=gen_params.host,\n",
-    "    experiment_server_port=gen_params.port,\n",
+    "    study_name=general_parameters.study_name_sampled,\n",
+    "    experiment_server_host=general_parameters.host,\n",
+    "    experiment_server_port=general_parameters.port,\n",
     "    experiment_design=weber_design_validation,\n",
     ")"
    ],
@@ -152,7 +152,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "theorist = Theorist_DARTS(gen_params.study_name, darts_type=DARTS_Type.ORIGINAL)"
+    "theorist = Theorist_DARTS(general_parameters.study_name, darts_type=DARTS_Type.ORIGINAL)"
    ],
    "metadata": {
     "collapsed": false,
