feat: add basic state machine with a stopping condition

--- a/tests/state_machine.ipynb
+++ b/tests/state_machine.ipynb
@@ -989,7 +989,7 @@
     "n = 1000\n",
     "for i in range(n):\n",
     "    trivial_machine.step()\n",
-    "print(f\"the data we just saved:\\n{the_data_after_all_the_iterations_so_far=}\\nthe current value after {n=} more iterations:\\n{trivial_machine.data=}\")\n"
+    "print(f\"the data we just saved:\\n{the_data_after_all_the_iterations_so_far=}\\nthe current value after {n=} more iterations:\\n{trivial_machine.data=}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -999,11 +999,45 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Machine with a stopping condition\n",
+    "Sometimes, the machine will need to stop conditionally based on some computed value.\n",
+    "Here we start from the value -1234 and stop when the value gets to be over 0 by means of a condition which disallows all other transitions."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 169,
    "outputs": [],
    "source": [
-    "## Machine with a stopping condition"
+    "stopping_machine = StateMachine()\n",
+    "\n",
+    "state_C = State(\"C\")\n",
+    "state_D = State(\"D\")\n",
+    "stopping_machine.register_state(state_C)\n",
+    "stopping_machine.register_state(state_D)\n",
+    "\n",
+    "initial_data = PlusMinusMachineData(-1234)\n",
+    "stopping_machine.set_data(initial_data)\n",
+    "stopping_machine.set_current_state(state_C)\n",
+    "\n",
+    "transition_CD = Transition(\n",
+    "    \"C -> D\",\n",
+    "    state_C,\n",
+    "    state_D,\n",
+    "    callback=lambda x: PlusMinusMachineData(x.value + 2),\n",
+    "    allowed=lambda state, data: data.value < 0\n",
+    ")\n",
+    "transition_DC = Transition(\"D -> C\", state_D, state_C, callback=lambda x: PlusMinusMachineData(x.value - 1))\n",
+    "stopping_machine.register_transition(transition_CD)\n",
+    "stopping_machine.register_transition(transition_DC)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -1014,7 +1048,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 173,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "started with: stopping_machine.data=PlusMinusMachineData(value=0)\n",
+      "machine stopped after i=0 iterations\n",
+      "finished with: stopping_machine.data=PlusMinusMachineData(value=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"started with: {stopping_machine.data=}\")\n",
+    "i=0\n",
+    "while True:\n",
+    "    try:\n",
+    "        stopping_machine.step()\n",
+    "        i+=1\n",
+    "    except StopIteration:\n",
+    "        print(f\"machine stopped after {i=} iterations\")\n",
+    "        break\n",
+    "print(f\"finished with: {stopping_machine.data=}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Machine with a stopping state\n",
+    "Alternatively, we can stop by having a stopping state from which there is no transition. This would allow doing \"special\" steps at the end of the cycle.\n",
+    "The transfer to the stopping state is the first (highest priority) transition, but is only allowed when a condition is met."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "outputs": [],
+   "source": [
+    "machine_with_stopped_state = StateMachine()\n",
+    "\n",
+    "stopped_state = State(\"stopped\")\n",
+    "machine_with_stopped_state.register_state(state_C)\n",
+    "machine_with_stopped_state.register_state(state_D)\n",
+    "machine_with_stopped_state.register_state(stopped_state)\n",
+    "\n",
+    "initial_data = PlusMinusMachineData(-1234)\n",
+    "machine_with_stopped_state.set_data(initial_data)\n",
+    "machine_with_stopped_state.set_current_state(state_C)\n",
+    "\n",
+    "transition_Cstopped = Transition(\n",
+    "    \"C -> stopped\",\n",
+    "    state_C,\n",
+    "    stopped_state,\n",
+    "    allowed=lambda state, data: data.value >= 0\n",
+    ")\n",
+    "transition_CD = Transition(\n",
+    "    \"C -> D\",\n",
+    "    state_C,\n",
+    "    state_D,\n",
+    "    callback=lambda x: PlusMinusMachineData(x.value + 2),\n",
+    ")\n",
+    "transition_DC = Transition(\"D -> C\", state_D, state_C, callback=lambda x: PlusMinusMachineData(x.value - 1))\n",
+    "machine_with_stopped_state.register_transition(transition_Cstopped)\n",
+    "machine_with_stopped_state.register_transition(transition_CD)\n",
+    "machine_with_stopped_state.register_transition(transition_DC)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "started with: machine_with_stopped_state.data=PlusMinusMachineData(value=-1234)\n",
+      "machine stopped after i=2469 iterations\n",
+      "finished with: machine_with_stopped_state.data=PlusMinusMachineData(value=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"started with: {machine_with_stopped_state.data=}\")\n",
+    "i=0\n",
+    "while True:\n",
+    "    try:\n",
+    "        machine_with_stopped_state.step()\n",
+    "        i+=1\n",
+    "    except StopIteration:\n",
+    "        print(f\"machine stopped after {i=} iterations\")\n",
+    "        break\n",
+    "print(f\"finished with: {machine_with_stopped_state.data=}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
