feat: update state machine to be a dataclass with an automatic __repr__ method

--- a/tests/state_machine.ipynb
+++ b/tests/state_machine.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 244,
    "outputs": [],
    "source": [
     "import copy\n",
     "import logging\n",
     "from asyncio import Protocol\n",
-    "from dataclasses import dataclass\n",
+    "from dataclasses import dataclass, field\n",
     "from typing import Optional, Any, List\n",
     "_logger = logging.getLogger(__name__)"
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "outputs": [],
    "source": [
     "@dataclass(frozen=True)\n",
@@ -73,12 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "outputs": [],
    "source": [
     "class TransitionCondition(Protocol):\n",
     "    \"\"\" Checks whether a transition is allowed. \"\"\"\n",
     "    def __call__(self, current_state: State, data: Optional[Any]) -> bool: ...\n",
+    "\n",
     "\n",
     "def default_transition_condition(current_state, data):\n",
     "    return True"
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 247,
    "outputs": [],
    "source": [
     "class TransitionCallback(Protocol):\n",
@@ -125,7 +126,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now we can define the transition itself. It has a starting state, ending state, the function to check whether it is allowed and the function to update the data."
+    "Now we can define the transition itself. It has a starting state, ending state, the `TransitionCondition` function to check whether it is allowed and the `TransitionCallback` function to update the data."
    ],
    "metadata": {
     "collapsed": false,
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 248,
    "outputs": [],
    "source": [
     "@dataclass(frozen=True)\n",
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 249,
    "outputs": [],
    "source": [
     "@dataclass(frozen=True)\n",
@@ -185,8 +186,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We define the state machine to have states, transitions, a current state, and some arbitrary data. We can register and unregister states and transitions to change the way the machine works. We can set the current state, and we can set the data.\n",
-    "It has a \"step\" method to find the first allowed transition and carry it out, executing the callback function if required."
+    "We define the state machine to have:\n",
+    "- states,\n",
+    "- transitions,\n",
+    "- a current state,\n",
+    "- and some arbitrary data.\n",
+    "\n",
+    "The following functionalities are defined as methods:\n",
+    "- We can print a representation of the machine, its transitions and its current state.\n",
+    "- We can register and unregister states and transitions to change the way the machine works.\n",
+    "- We can set the current state, and\n",
+    "- We can set the data.\n",
+    "- We can take a \"step\" to find the first allowed transition from the current state and carry it out, executing the callback function."
    ],
    "metadata": {
     "collapsed": false,
@@ -197,18 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 251,
    "outputs": [],
    "source": [
+    "@dataclass\n",
     "class StateMachine(object):\n",
-    "    def __init__(self):\n",
-    "        self.states: List[State] = []\n",
-    "        self.transitions: List[Transition] = []\n",
-    "        self.current_state: State = None\n",
-    "        self.data: ImmutableData = ImmutableData()\n",
     "\n",
-    "    def __repr__(self):\n",
-    "        return f\"{self.states=}\\n{self.transitions=}\\n{self.current_state=}\\n{self.data=}\"\n",
+    "    states: List[State] = field(default_factory=list)\n",
+    "    transitions: List[Transition] = field(default_factory=list)\n",
+    "    current_state: State = None\n",
+    "    data: ImmutableData = field(default_factory=ImmutableData)\n",
     "\n",
     "    def register_state(self, state: State):\n",
     "        self.states.append(state)\n",
@@ -275,13 +284,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 252,
    "outputs": [
     {
      "data": {
-      "text/plain": "self.states=[State(name='start'), State(name='end')]\nself.transitions=[Transition(name='start-end', state1=State(name='start'), state2=State(name='end'), allowed=<function default_transition_condition at 0x124d97be0>, callback=<function default_transition_callback at 0x1238d8dc0>)]\nself.current_state=State(name='start')\nself.data=ImmutableData()"
+      "text/plain": "StateMachine(states=[State(name='start'), State(name='end')], transitions=[Transition(name='start-end', state1=State(name='start'), state2=State(name='end'), allowed=<function default_transition_condition at 0x1600295a0>, callback=<function default_transition_callback at 0x16002a050>)], current_state=State(name='start'), data=ImmutableData())"
      },
-     "execution_count": 81,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 253,
    "outputs": [
     {
      "name": "stdout",
@@ -355,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 254,
    "outputs": [
     {
      "name": "stdout",
@@ -390,27 +399,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 255,
    "outputs": [
     {
-     "ename": "StopIteration",
-     "evalue": "There are no more allowed transitions from self.current_state=State(name='end') with self.data=ImmutableData()",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mStopIteration\u001B[0m                             Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [80], line 38\u001B[0m, in \u001B[0;36mStateMachine.step\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     37\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m---> 38\u001B[0m     transition \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mnext\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mallowed_transitions\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     39\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mStopIteration\u001B[39;00m:\n",
-      "\u001B[0;31mStopIteration\u001B[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[0;31mStopIteration\u001B[0m                             Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [84], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mtrivial_machine\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstep\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn [80], line 40\u001B[0m, in \u001B[0;36mStateMachine.step\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     38\u001B[0m     transition \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mnext\u001B[39m(allowed_transitions)\n\u001B[1;32m     39\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mStopIteration\u001B[39;00m:\n\u001B[0;32m---> 40\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mStopIteration\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mThere are no more allowed transitions from \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcurrent_state\u001B[38;5;132;01m=}\u001B[39;00m\u001B[38;5;124m with \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata\u001B[38;5;132;01m=}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     42\u001B[0m _logger\u001B[38;5;241m.\u001B[39minfo(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnext \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtransition\u001B[38;5;132;01m=}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     43\u001B[0m \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(transition, Transition), \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtransition\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m is not a Transition – something\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124ms gone wrong.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
-      "\u001B[0;31mStopIteration\u001B[0m: There are no more allowed transitions from self.current_state=State(name='end') with self.data=ImmutableData()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exception=StopIteration(\"There are no more allowed transitions from self.current_state=State(name='end') with self.data=ImmutableData()\")\n"
      ]
     }
    ],
    "source": [
-    "trivial_machine.step()"
+    "try:\n",
+    "    trivial_machine.step()\n",
+    "except StopIteration as exception:\n",
+    "    print(f\"{exception=}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -434,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 256,
    "outputs": [],
    "source": [
     "machine = StateMachine()"
@@ -460,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 257,
    "outputs": [],
    "source": [
     "state_new_theory = State(\"new_theory\")\n",
@@ -492,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 258,
    "outputs": [],
    "source": [
     "transition_theorist = Transition(\n",
@@ -536,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 259,
    "outputs": [],
    "source": [
     "machine.set_current_state(state_new_experiment)"
@@ -562,13 +565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 260,
    "outputs": [
     {
      "data": {
-      "text/plain": "self.states=[State(name='new_theory'), State(name='new_experiment'), State(name='new_data')]\nself.transitions=[Transition(name='theorist', state1=State(name='new_data'), state2=State(name='new_theory'), allowed=<function default_transition_condition at 0x124d97be0>, callback=<function default_transition_callback at 0x1238d8dc0>), Transition(name='experimentalist', state1=State(name='new_theory'), state2=State(name='new_experiment'), allowed=<function default_transition_condition at 0x124d97be0>, callback=<function default_transition_callback at 0x1238d8dc0>), Transition(name='experiment_runner', state1=State(name='new_experiment'), state2=State(name='new_data'), allowed=<function default_transition_condition at 0x124d97be0>, callback=<function default_transition_callback at 0x1238d8dc0>)]\nself.current_state=State(name='new_experiment')\nself.data=ImmutableData()"
+      "text/plain": "StateMachine(states=[State(name='new_theory'), State(name='new_experiment'), State(name='new_data')], transitions=[Transition(name='theorist', state1=State(name='new_data'), state2=State(name='new_theory'), allowed=<function default_transition_condition at 0x1600295a0>, callback=<function default_transition_callback at 0x16002a050>), Transition(name='experimentalist', state1=State(name='new_theory'), state2=State(name='new_experiment'), allowed=<function default_transition_condition at 0x1600295a0>, callback=<function default_transition_callback at 0x16002a050>), Transition(name='experiment_runner', state1=State(name='new_experiment'), state2=State(name='new_data'), allowed=<function default_transition_condition at 0x1600295a0>, callback=<function default_transition_callback at 0x16002a050>)], current_state=State(name='new_experiment'), data=ImmutableData())"
      },
-     "execution_count": 89,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 261,
    "outputs": [
     {
      "name": "stdout",
@@ -654,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 262,
    "outputs": [],
    "source": [
     "machine_with_additional_step  = copy.copy(machine)\n",
@@ -687,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 263,
    "outputs": [
     {
      "name": "stdout",
@@ -732,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 264,
    "outputs": [],
    "source": [
     "trivial_machine = StateMachine()\n",
@@ -776,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 265,
    "outputs": [
     {
      "name": "stdout",
@@ -812,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 266,
    "outputs": [
     {
      "name": "stdout",
@@ -847,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 267,
    "outputs": [
     {
      "name": "stdout",
@@ -882,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 268,
    "outputs": [
     {
      "name": "stdout",
@@ -926,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 269,
    "outputs": [
     {
      "name": "stdout",
@@ -948,13 +951,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 270,
    "outputs": [
     {
      "data": {
       "text/plain": "PlusMinusMachineData(value=8)"
      },
-     "execution_count": 157,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 271,
    "outputs": [
     {
      "name": "stdout",
@@ -1014,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 272,
    "outputs": [],
    "source": [
     "stopping_machine = StateMachine()\n",
@@ -1048,14 +1051,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 273,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "started with: stopping_machine.data=PlusMinusMachineData(value=0)\n",
-      "machine stopped after i=0 iterations\n",
+      "started with: stopping_machine.data=PlusMinusMachineData(value=-1234)\n",
+      "machine stopped after i=2468 iterations\n",
       "finished with: stopping_machine.data=PlusMinusMachineData(value=0)\n"
      ]
     }
@@ -1095,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 274,
    "outputs": [],
    "source": [
     "machine_with_stopped_state = StateMachine()\n",
@@ -1135,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 275,
    "outputs": [
     {
      "name": "stdout",
@@ -1168,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "outputs": [],
    "source": [],
    "metadata": {
