fix: rename parameter to avoid shadowing

--- a/tests/state_machine.ipynb
+++ b/tests/state_machine.ipynb
@@ -303,8 +303,8 @@
     "trivial_machine.register_state(start)\n",
     "trivial_machine.register_state(end)\n",
     "\n",
-    "transition = Transition(\"start-end\", start, end)\n",
-    "trivial_machine.register_transition(transition)\n",
+    "transition_start_end = Transition(\"start-end\", start, end)\n",
+    "trivial_machine.register_transition(transition_start_end)\n",
     "\n",
     "trivial_machine.set_current_state(start)\n",
     "trivial_machine"
